--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -6,3 +6,22 @@ body,
     margin: 0;
     padding: 0;
 }
+
+.el-breadcrumb {
+    margin-bottom: 15px;
+    font-size: 13px;
+}
+
+.el-card {
+    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2) !important;
+}
+.el-table {
+    margin-top: 15px;
+    font-size: 13px;
+}
+.el-button.is-circle {
+    margin: 0 5px;
+}
+.el-pagination {
+    margin-top: 20px;
+}
